--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,6 +28,11 @@
     height: 50px;
 }
 
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .buttons {
     background-color: black;
     color: white;
@@ -38,3 +43,19 @@
     padding-bottom: 2px;
     border-radius: 3px;
 }
+
+.gridTopLeft {
+    border-top-left-radius: 15px;
+}
+
+.gridTopRight {
+    border-top-right-radius: 15px;
+}
+.gridBottomLeft {
+    border-bottom-left-radius: 15px;
+}
+
+.gridBottomRight {
+    border-bottom-right-radius: 15px;
+}
+
