Styled buttons by updating color.  Added a provision in the changePlayer function that prevents the player turn from being changed if the column is full.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,7 +34,7 @@
     justify-content: center;
 }
 .buttons {
-    background-color: black;
+    background-color: rgb(64, 64, 64);
     color: white;
     border: none;
     padding-right: 5px;
@@ -45,17 +45,17 @@
 }
 
 .gridTopLeft {
-    border-top-left-radius: 15px;
+    border-top-left-radius: 10px;
 }
 
 .gridTopRight {
-    border-top-right-radius: 15px;
+    border-top-right-radius: 10px;
 }
 .gridBottomLeft {
-    border-bottom-left-radius: 15px;
+    border-bottom-left-radius: 10px;
 }
 
 .gridBottomRight {
-    border-bottom-right-radius: 15px;
+    border-bottom-right-radius: 10px;
 }
 
