--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 .gridBox {
-    background-color: yellow;
+    background-color: rgba(255, 255, 51, 0.9);
     width: 75px;
     height: 75px;
     display: flex;
