--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,12 +35,13 @@
 }
 .buttons {
     background-color: rgb(64, 64, 64);
+    font-size: 16px;
     color: white;
     border: none;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding-right: 7px;
+    padding-left: 7px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     border-radius: 3px;
 }
 
