--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,6 +45,18 @@
     border-radius: 3px;
 }
 
+.resetButton {
+    background-color: rgb(64, 64, 64);
+    font-size: 16px;
+    color: white;
+    border: none;
+    padding-right: 7px;
+    padding-left: 7px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 3px;
+}
+
 .gridTopLeft {
     border-top-left-radius: 10px;
 }
